static/css/footer.css
html {
    position: relative;
    min-height: 100%;
}
.footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 60px;
    line-height: 60px; /* Vertically center the text here */
    background-color: #f5f5f5;
    margin-top: 30px;
}

